[package]
name = "lan_rs_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
df = ["polars"]
use_ndarray = ["ndarray", "ndarray-linalg", "blas-src"]
use_petgraph = ["petgraph", "petgraph-evcxr"]
incl_plot = ["plotters"]
use_network = ["reqwest"]
use_serde = ["csv", "serde"]
use_glob = ["glob"]
use_arbitrary = ["arbitrary"]

[dependencies]
itertools = "0.14.0"
bitflags = "2.8.0"
log = "0.4.25"

derive_builder = "0.20.2"
generator = "0.8.4"
ibig = "0.3.6"
im = "15.1.0"
libm = "0.2.11"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
tap = "1.0.1"

reqwest = { version = "0.12.12", features = ["blocking"], optional = true }

glob = { version = "0.3.2", optional = true }

petgraph = { version = "0.7.1", optional = true }
petgraph-evcxr = { version = "0.2.0", optional = true }
plotters = { version = "0.3.7", optional = true }

polars = { version = "0.46.0", features = ["lazy"], optional = true}

ndarray = { version = "0.16.1", optional = true}
ndarray-linalg = { version = "0.16", features = ["openblas"], optional = true}
blas-src = { version = "0.9", default-features = false, features = ["openblas"], optional = true }


serde = { version = "1.0.219", features = ["derive"], optional = true}
csv = { version = "1.3.1", optional = true }

arbitrary = { version = "1.4.1", features = ["derive", "derive_arbitrary"], optional = true }
